--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -1,27 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true">
-
-
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EditProfile">
+
    <ImageView
        android:id="@+id/ivuser"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
-       android:layout_marginBottom="40dp"
+       android:layout_marginTop="30dp"
        android:src="@drawable/apple"
        app:layout_constraintEnd_toEndOf="@id/rightguide"
        app:layout_constraintStart_toStartOf="@id/leftguide"
-       app:layout_constraintBottom_toTopOf="@id/etname"
+       app:layout_constraintTop_toTopOf="parent"
        />
 
    <com.google.android.material.textfield.TextInputLayout
@@ -29,10 +23,10 @@
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
-       android:layout_marginTop="2dp"
+       android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@id/rightguide"
        app:layout_constraintStart_toStartOf="@id/leftguide"
-       app:layout_constraintBottom_toTopOf="@id/etsurname"
+       app:layout_constraintTop_toBottomOf="@id/ivuser"
        app:hintTextColor="@color/secondary_dark">
 
       <EditText
@@ -48,10 +42,10 @@
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
-       android:layout_marginTop="100dp"
+       android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@id/rightguide"
        app:layout_constraintStart_toStartOf="@id/leftguide"
-       app:layout_constraintBottom_toTopOf="@id/ettelf"
+       app:layout_constraintTop_toBottomOf="@id/etname"
        app:hintTextColor="@color/secondary_dark">
 
       <EditText
@@ -67,10 +61,10 @@
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
-       android:layout_marginTop="2dp"
+       android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@id/rightguide"
        app:layout_constraintStart_toStartOf="@id/leftguide"
-       app:layout_constraintBottom_toTopOf="@id/etmail"
+       app:layout_constraintTop_toBottomOf="@id/etsurname"
        app:hintTextColor="@color/secondary_dark">
 
       <EditText
@@ -86,10 +80,10 @@
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
-       android:layout_marginTop="2dp"
+       android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@id/rightguide"
        app:layout_constraintStart_toStartOf="@id/leftguide"
-       app:layout_constraintBottom_toTopOf="@id/etpassword"
+       app:layout_constraintTop_toBottomOf="@id/ettelf"
        app:hintTextColor="@color/secondary_dark">
 
       <EditText
@@ -105,10 +99,10 @@
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
-       android:layout_marginTop="2dp"
+       android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@id/rightguide"
        app:layout_constraintStart_toStartOf="@id/leftguide"
-       app:layout_constraintBottom_toTopOf="@id/etdescription"
+      app:layout_constraintTop_toBottomOf="@id/etmail"
        app:hintTextColor="@color/secondary_dark">
 
       <EditText
@@ -124,19 +118,23 @@
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
-       android:layout_marginTop="2dp"
-       android:layout_marginBottom="60dp"
+       android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@id/rightguide"
        app:layout_constraintStart_toStartOf="@id/leftguide"
-       app:layout_constraintBottom_toTopOf="@id/btncancel"
+       app:layout_constraintTop_toBottomOf="@id/etpassword"
        app:hintTextColor="@color/secondary_dark">
 
       <EditText
+
           android:layout_width="match_parent"
-          android:layout_height="match_parent"
+          android:layout_height="wrap_content"
+          android:inputType="textMultiLine"
+          android:lines="3"
+          android:maxLines="3"
+          android:minLines="3"
+          android:scrollbars="vertical"
           android:hint="@string/description"
           android:theme="@style/lineET"
-          android:inputType="text"
           android:text="hola me llamo pepe tengo hambre y quiero comer chocolate con churros"/>
    </com.google.android.material.textfield.TextInputLayout>
 
@@ -146,7 +144,7 @@
        style="@style/buttonOutlinedRed"
        android:backgroundTint="@color/button_selector"
        android:layout_marginTop="15dp"
-       android:layout_marginBottom="30dp"
+       android:layout_marginBottom="20dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="@id/leftguide"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
@@ -156,7 +154,8 @@
        android:id="@+id/btnsave"
        style="@style/buttonOutlinedRed"
        android:layout_width="150dp"
-       android:layout_marginBottom="30dp"
+       android:layout_marginTop="15dp"
+       android:layout_marginBottom="20dp"
        android:backgroundTint="@color/button_selector"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
@@ -191,4 +190,3 @@
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
