--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -83,7 +83,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/btnSingUp"
+        android:id="@+id/btnSignUp"
         style="@style/buttonOutlinedRed"
         android:backgroundTint="@color/button_selector"
         android:layout_marginTop="5dp"
@@ -98,7 +98,7 @@
         android:text="@string/cancel"
         app:layout_constraintEnd_toEndOf="@id/rightguide"
         app:layout_constraintStart_toStartOf="@id/leftguide"
-        app:layout_constraintTop_toBottomOf="@id/btnSingUp" />
+        app:layout_constraintTop_toBottomOf="@id/btnSignUp" />
 
 <!--    <TextView-->
 <!--        android:id="@+id/tvother"-->
@@ -148,14 +148,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.20"/>
+        app:layout_constraintGuide_percent="0.10"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/rightguide"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.8"/>
+        app:layout_constraintGuide_percent="0.9"/>
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/topguide"
         android:layout_width="match_parent"
