--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -98,33 +98,36 @@
                 app:hintTextColor="@color/secondary_dark">
 
                 <EditText
+                    android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="@string/email"
-                    android:editable="false"
+                    android:focusable="false"
+                    android:clickable="false"
+                    android:cursorVisible="false"
                     android:theme="@style/lineET"
                     android:inputType="none" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/etpassword"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                app:layout_constraintEnd_toEndOf="@id/rightguide"
-                app:layout_constraintStart_toStartOf="@id/leftguide"
-                app:layout_constraintTop_toBottomOf="@id/etemail"
-                app:hintTextColor="@color/secondary_dark">
+<!--            <com.google.android.material.textfield.TextInputLayout-->
+<!--                android:id="@+id/etpassword"-->
+<!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="12dp"-->
+<!--                app:layout_constraintEnd_toEndOf="@id/rightguide"-->
+<!--                app:layout_constraintStart_toStartOf="@id/leftguide"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/etemail"-->
+<!--                app:hintTextColor="@color/secondary_dark">-->
 
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:editable="false"
-                    android:hint="@string/pass"
-                    android:inputType="none"
-                    android:theme="@style/lineET" />
-            </com.google.android.material.textfield.TextInputLayout>
+<!--                <EditText-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:editable="false"-->
+<!--                    android:hint="@string/pass"-->
+<!--                    android:inputType="none"-->
+<!--                    android:theme="@style/lineET" />-->
+<!--            </com.google.android.material.textfield.TextInputLayout>-->
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/etdescription"
@@ -134,7 +137,7 @@
                 android:layout_marginTop="12dp"
                 app:layout_constraintEnd_toEndOf="@id/rightguide"
                 app:layout_constraintStart_toStartOf="@id/leftguide"
-                app:layout_constraintTop_toBottomOf="@id/etpassword"
+                app:layout_constraintTop_toBottomOf="@id/etemail"
                 app:hintTextColor="@color/secondary_dark">
 
                 <EditText
