--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -83,7 +83,7 @@
                     android:layout_height="match_parent"
                     android:hint="@string/telefono"
                     android:theme="@style/lineET"
-                    android:inputType="phone" />
+                    android:inputType="number" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
