--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -10,6 +10,10 @@
             android:icon="@drawable/ic_notifications"
             android:title="@string/notifications" />
         <item
+            android:id="@+id/nav_createplan"
+            android:icon="@drawable/ic_createplan"
+            android:title="@string/createplan" />
+        <item
             android:id="@+id/nav_manusu"
             android:icon="@drawable/ic_manusu"
             android:title="@string/manusu" />
