--- a/app/src/main/res/layout/fragment_faqs.xml
+++ b/app/src/main/res/layout/fragment_faqs.xml
@@ -15,43 +15,32 @@
 
         <TextView
             android:id="@+id/pregunta1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/faqsquestionStyle"
             app:layout_constraintEnd_toEndOf="@id/rightguide"
             app:layout_constraintStart_toStartOf="@id/leftguide"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginVertical="65dp"
-            android:textAlignment="center"
-            android:text="@string/question1"
-            android:textStyle="bold"
-            android:textColor="@color/dark_gray"/>
+            android:text="@string/question1" />
+
         <TextView
             android:id="@+id/respuesta1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="fill_horizontal"
+            style="@style/faqsanswersStyle"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/pregunta1"
             android:text="@string/answer1" />
         <TextView
             android:id="@+id/pregunta2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/faqsquestionStyle"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/respuesta1"
             android:layout_marginVertical="20dp"
-            android:textAlignment="center"
-            android:text="@string/question2"
-            android:textStyle="bold"
-            android:textColor="@color/dark_gray"/>
+            android:text="@string/question2" />
 
         <TextView
             android:id="@+id/respuesta2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="fill_horizontal"
+            style="@style/faqsanswersStyle"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/pregunta2"
@@ -59,173 +48,127 @@
 
         <TextView
             android:id="@+id/pregunta3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/faqsquestionStyle"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/respuesta2"
             android:layout_marginVertical="20dp"
-            android:textAlignment="center"
-            android:text="@string/question3"
-            android:textStyle="bold"
-            android:textColor="@color/dark_gray" />
+            android:text="@string/question3" />
 
         <TextView
             android:id="@+id/respuesta3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="fill_horizontal"
+            style="@style/faqsanswersStyle"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/pregunta3"
             android:text="@string/answer3" />
         <TextView
             android:id="@+id/pregunta4"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/faqsquestionStyle"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/respuesta3"
             android:layout_marginVertical="20dp"
-            android:textAlignment="center"
-            android:text="@string/question4"
-            android:textStyle="bold"
-            android:textColor="@color/dark_gray" />
+            android:text="@string/question4" />
         <TextView
             android:id="@+id/respuesta4"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="fill_horizontal"
+            style="@style/faqsanswersStyle"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/pregunta4"
             android:text="@string/answer4" />
         <TextView
             android:id="@+id/pregunta5"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/faqsquestionStyle"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/respuesta4"
             android:layout_marginVertical="20dp"
-            android:textAlignment="center"
-            android:text="@string/question5"
-            android:textStyle="bold"
-            android:textColor="@color/dark_gray" />
+            android:text="@string/question5" />
         <TextView
             android:id="@+id/respuesta5"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="fill_horizontal"
+            style="@style/faqsanswersStyle"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/pregunta5"
             android:text="@string/answer5" />
         <TextView
             android:id="@+id/pregunta6"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/faqsquestionStyle"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/respuesta5"
             android:layout_marginVertical="20dp"
-            android:textAlignment="center"
-            android:text="@string/question6"
-            android:textStyle="bold"
-            android:textColor="@color/dark_gray" />
+            android:text="@string/question6" />
         <TextView
             android:id="@+id/respuesta6"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="fill_horizontal"
+            style="@style/faqsanswersStyle"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/pregunta6"
             android:text="@string/answer6" />
         <TextView
             android:id="@+id/pregunta7"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/faqsquestionStyle"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/respuesta6"
             android:layout_marginVertical="20dp"
-            android:textAlignment="center"
             android:text="@string/question7"
-            android:textStyle="bold"
-            android:textColor="@color/dark_gray" />
+ />
         <TextView
             android:id="@+id/respuesta7"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="fill_horizontal"
+            style="@style/faqsanswersStyle"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/pregunta7"
             android:text="@string/answer7" />
         <TextView
             android:id="@+id/pregunta8"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/faqsquestionStyle"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/respuesta7"
             android:layout_marginVertical="20dp"
-            android:textAlignment="center"
-            android:text="@string/question8"
-            android:textStyle="bold"
-            android:textColor="@color/dark_gray" />
+            android:text="@string/question8" />
         <TextView
             android:id="@+id/respuesta8"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="fill_horizontal"
+            style="@style/faqsanswersStyle"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/pregunta8"
             android:text="@string/answer8" />
         <TextView
             android:id="@+id/pregunta9"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/faqsquestionStyle"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/respuesta8"
             android:layout_marginVertical="20dp"
-            android:textAlignment="center"
-            android:text="@string/question9"
-            android:textStyle="bold"
-            android:textColor="@color/dark_gray" />
+            android:text="@string/question9" />
         <TextView
             android:id="@+id/respuesta9"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="fill_horizontal"
+            style="@style/faqsanswersStyle"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/pregunta9"
             android:text="@string/answer9" />
         <TextView
             android:id="@+id/pregunta10"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/faqsquestionStyle"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/respuesta9"
             android:layout_marginVertical="20dp"
-            android:textAlignment="center"
-            android:text="@string/question10"
-            android:textStyle="bold"
-            android:textColor="@color/dark_gray" />
+            android:text="@string/question10" />
         <TextView
             android:id="@+id/respuesta10"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="fill_horizontal"
+            style="@style/faqsanswersStyle"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/pregunta10"
-            android:text="@string/answer10" />
+            android:text="@string/answer10"
+            android:paddingBottom="30dp"/>
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/leftguide"
             android:layout_width="match_parent"
