--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,5 +43,17 @@
         <item name="android:background">@drawable/rounded_button_bg</item>
         <item name="android:elevation">4dp</item>
     </style>
+    <style name="faqsquestionStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">fill_horizontal</item>
+        <item name="android:textColor">@color/dark_gray</item>
+    </style>
+    <style name="faqsanswersStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">fill_horizontal</item>
+    </style>
 
 </resources>
